[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["KunQAQrz <704072809@qq.com>"]
edition = "2024"
readme = "README.md"
name = "rtic-template"
version = "0.1.0"
description = "rtic-template"

[workspace]

[dependencies.rtic]
version = "2.2.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "2.1.0"
features = ["cortex-m-systick"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies]
embedded-hal = "1.0.0"
panic-rtt-target = { version = "0.2.0" }
rtt-target = { version = "0.6.1" }

[dependencies.stm32h7xx-hal]
features = ["stm32h743v", "rt"]
version = "0.16.0"

# this lets you use `cargo fix`!
[[bin]]
name = "rtic-template"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = 3     # optimize for size
codegen-units = 1 # better optimizations
debug = false     # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
